Sat Oct 17 19:58:52 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_string.h:
        * ace/OS_NS_string.cpp:
          Added ACE_OS::strsignal().

        * ace/config-cygwin32.h:
        * ace/config-freebsd.h:
        * ace/config-lynxos.h:
        * ace/config-netbsd.h:
        * ace/config-openbsd.h:
        * ace/config-sunos5.4-g++.h:
        * ace/config-sunos5.4-sunc++-4.x.h:
        * ace/config-sunos5.5.h:
          Added ACE_HAS_STRSIGNAL

        * tests/OS_Test.cpp:
          Added a test for ACE_OS::strsignal().

        * ace/config-win32-common.h:
        * ace/README:
        * ace/config-cray.h:
          Removed references to ACE_HAS_SYS_SIGLIST. It will be removed
          soon.

Sat Oct 17 10:29:13 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Removed duplicate define ACE_HAS_GETIFADDRS.

Sat Oct 17 10:26:15 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdio.h:
          Removed undef fdopen. We may need to add helper wrapper for fdopen.

Sat Oct 17 07:32:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OS_Test.cpp:
          Removed getmacaddress test, that moved to its own test

Fri Oct 16 08:51:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_doxygen.pl:
        * htlm/index.html:
          Added dds4ccm

Fri Oct 16 06:38:19 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/run_test.lst:
          Run Enum_Interfaces_Test, MT_SOCK_Test, TP_Reactor_Test on LynxOS.

Fri Oct 16 06:00:42 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdio.h:
        * ace/OS_NS_stdio.inl:
          Readded "Tue Oct 13 19:13:13 UTC 2009  Olli Savia  <ops@iki.fi>"
          without os_unistd.h modifications.

Thu Oct 15 17:33:05 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/OS_NS_stdio.h:
        * ace/OS_NS_stdio.inl:
        * ace/os_include/os_unistd.h:
